plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

apply plugin: 'java'

group = 'com.rct.humanresources'
version = '0.0.1-SNAPSHOT'
description = "Spring - WebFlux - Human Resources Application Template"

ext {
	blockHoundVersion = '1.0.8.RELEASE'
	jetBrainsAnnotationsVersion = '24.1.0'
	logbackVersion = '1.5.0'
	lombokVersion = '1.18.30'
	lombokMapStructVersion = '0.2.0'
	mapStructVersion = '1.6.0.Beta1'
	reactorVersion = '3.6.3'
	sl4jVersion = '2.0.12'
	springBootVersion = '3.2.3'
	springContextVersion = '6.1.3'
	springCoreVersion = '6.1.3'
	springDocOpenApiVersion = '2.3.0'
	springMongoReactiveVersion = '3.2.2'
	webJarsSwaggerUiVersion = '5.11.8'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

tasks.withType(JavaCompile).configureEach {
	options.annotationProcessorPath = configurations.annotationProcessor
}

javadoc{
	destinationDir = file("${projectDir}/build/docs/javadoc")
	exclude "com.rct.core.service"
}

java {
	sourceCompatibility = JavaVersion.VERSION_17
	toolchain {
		languageVersion.set(JavaLanguageVersion.of(21))
	}
}

jar {
	manifest {
		attributes(
				'Automatic-Module-Name': 'org.springdoc.openapi.webflux.ui'
		)
	}
}

repositories {
	mavenCentral()
}

dependencies {

	implementation "org.springframework:spring-context:${springContextVersion}"
	implementation "org.springframework.boot:spring-boot-starter:${springBootVersion}"
	implementation "org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}"
	implementation "org.springframework.boot:spring-boot-devtools:${springBootVersion}"
	implementation "org.springframework.boot:spring-boot-starter-data-mongodb-reactive:${springMongoReactiveVersion}"
	implementation "org.jetbrains:annotations:${jetBrainsAnnotationsVersion}"
	implementation "org.mapstruct:mapstruct:${mapStructVersion}"
	implementation "org.projectlombok:lombok-mapstruct-binding:${lombokMapStructVersion}"
	implementation "org.springdoc:springdoc-openapi-starter-webflux-ui:${springDocOpenApiVersion}"
	implementation "io.projectreactor:reactor-tools:${reactorVersion}"
	implementation "org.slf4j:slf4j-api:${sl4jVersion}"
	implementation "io.projectreactor.tools:blockhound:${blockHoundVersion}"
	implementation "ch.qos.logback:logback-core:${logbackVersion}"

	compileOnly "org.projectlombok:lombok:${lombokVersion}"

	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:${springBootVersion}"
	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapStructVersion}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"

	testAnnotationProcessor "org.mapstruct:mapstruct:${mapStructVersion}"

//	testImplementation "io.projectreactor.tools:blockhound-junit-platform:${blockHoundVersion}"
	testImplementation "io.projectreactor:reactor-test:${reactorVersion}"
	testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
	testImplementation "ch.qos.logback:logback-classic:${logbackVersion}"

}

tasks.named('test') {
	useJUnitPlatform()
}
tasks.withType(Test).configureEach {
	if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_21)) {
		jvmArgs += [
				"-XX:+AllowRedefinitionToAddDeleteMethods",
				"-XX:+EnableDynamicAgentLoading"
		]

	}
}
test {
	jvmArgs '-XX:+AllowRedefinitionToAddDeleteMethods'
}
